# image-viewer-rs

./: .gitignore  AGENTS.md  Cargo.toml  FEATURES.md  LICENSE  Readme.md  build.rs
assets/default/: config.toml
assets/macos/: info_plist_ext.xml
src/: main.rs  review.rs
