[package]
name = "image-viewer"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Erwan BERNARD"]
homepage = "https://github.com/edmBernard/image-viewer-rs"
description = "Image Viewer that allow comparison side-by-side, in grid or in stack."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.*", features = ["serialize", "jpeg", "bmp", "bevy_render"] }
clap = { version = "4.4.*", features = ["derive"] }
image = "0.24.*"
home = "0.5.9"
serde = "1.0.197"
toml = "0.8.10"

[package.metadata.bundle]
identifier = "io.github.edmbernard.image-viewer-rs"
resources = ["assets/"]  # Shipped assets are not currently used. But it allow to bundle license copy.
icon = ["assets/icons/128x128.png", "assets/icons/128x128@2x.png", "assets/icons/256x256.png", "assets/icons/256x256@2x.png"]
