[package]
name = "image-viewer"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Erwan BERNARD"]
homepage = "https://github.com/edmBernard/image-viewer-rs"
description = "Image Viewer that allow comparison side-by-side, in grid or in stack."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.18", features = ["serialize", "jpeg", "bmp", "bevy_render"] }
bevy_egui = "0.39"
clap = { version = "4", features = ["derive"] }
image = "0.25"
home = "0.5"
serde = "1"
serde_json = "1"
toml = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSURL", "NSArray"] }

[package.metadata.bundle]
identifier = "io.github.edmbernard.image-viewer-rs"
resources = ["assets/"]  # Shipped assets are not currently used. But it allow to bundle license copy.
icon = ["assets/icons/128x128.png", "assets/icons/128x128@2x.png", "assets/icons/256x256.png", "assets/icons/256x256@2x.png"]
osx_info_plist_exts = ["assets/macos/info_plist_ext.xml"]
